# dense_reconstruction

./: .bazelrc  CMakeLists.txt  MODULE.bazel
include/: RGBDCamera.h
src/: RGBDCamera.cpp  main.cpp
visual_odometry/: BUILD  camera_pose_estimator.cpp  camera_pose_estimator.h  feature_detector_factory.cpp  feature_detector_factory.h  main.cpp
