module(name = "dense_reconstruction")

bazel_dep(name = "abseil-cpp", version = "20250814.0")
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "opencv", version = "4.11.0.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
